# c2.pas.aal2

./: CHANGES.rst  CLAUDE.md  COOKIE_SESSION_SOLUTION.md  LICENSE.rst  MANIFEST.in  PASSKEY_LOGIN_FIX_SUMMARY.md  PASSKEY_LOGIN_FIX_V2.md  README.md  REFACTORING_TODO.md  SESSION_ISSUE_ANALYSIS.md  TESTING_GUIDE.md  pyproject.toml  pyrightconfig.json  pytest.ini  setup.py  test_passkey_login.py  tox.ini
.claude/: settings.local.json
.devcontainer/: Dockerfile  init-firewall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: ADMIN.md  DEVELOPER.md  FALLBACK.md  README.md  implementation_guide.md  migration_guide.md  security_review.md
specs/001-c2-pas-aal2/: data-model.md  plan.md  quickstart.md  research.md  setup-py-template.md  spec.md  tasks.md
specs/001-c2-pas-aal2/checklists/: requirements.md
specs/002-passkey-login/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-passkey-login/checklists/: requirements.md
specs/002-passkey-login/contracts/: api-endpoints.md
specs/003-aal2-compliance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-aal2-compliance/checklists/: requirements.md
specs/003-aal2-compliance/contracts/: README.md  policy-api.md  session-api.md
specs/004-github-actions-ci/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-github-actions-ci/checklists/: requirements.md
specs/004-github-actions-ci/contracts/: workflow-contract.md
specs/005-implementation-refinements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-implementation-refinements/checklists/: requirements.md
specs/005-implementation-refinements/contracts/: audit-log-api.yaml
specs/006-aal2-admin-protection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-aal2-admin-protection/checklists/: requirements.md
specs/006-aal2-admin-protection/contracts/: admin-protection-api.md
src/c2/: __init__.py
src/c2/pas/: __init__.py
src/c2/pas/aal2/: README.md  __init__.py  configure.zcml  credential.py  interfaces.py  permissions.py  plugin.py  policy.py  roles.py  session.py  setuphandlers.py
src/c2/pas/aal2/admin/: __init__.py  configure.zcml  interfaces.py  protection.py  subscriber.py
src/c2/pas/aal2/browser/: __init__.py  aal2_challenge.pt  aal2_settings.pt  aal2_status.pt  audit_views.py  configure.zcml  viewlets.py  views.py
src/c2/pas/aal2/catalog/: __init__.py
src/c2/pas/aal2/controlpanel/: __init__.py  configure.zcml  interfaces.py  views.py
src/c2/pas/aal2/storage/: __init__.py  audit.py  query.py
src/c2/pas/aal2/upgrades/: __init__.py  configure.zcml  v1006.py  v1007.py
tests/: README.md  __init__.py  conftest.py  test_admin_challenge.py  test_admin_config.py  test_admin_protection.py  test_admin_status.py  test_audit_storage.py  test_browser_views.py  test_credential_storage.py  test_import.py  test_integration_aal2.py  test_integration_admin.py  test_pas_plugin.py  test_permissions.py  test_plugin_registration.py  test_policy.py  test_policy_contract.py  test_roles.py  test_session.py  test_session_contract.py  test_stub_methods.py
tests/fixtures/: baseline_js.txt
(+38 files in other folders)
